<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp64"
        android:background="@drawable/bg_layout_top_white">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp16"
            android:src="@drawable/logo_sm"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="登 录"
            android:textSize="18sp"
            android:layout_centerInParent="true"
            android:textColor="@color/color_b1"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0.5"
        android:layout_marginStart="@dimen/dp02"
        android:layout_marginEnd="@dimen/dp02"
        android:background="@color/color_a4"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:id="@+id/linearLayout">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/input_account"
            android:layout_gravity="center_vertical"
            android:src="@drawable/name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:layout_gravity="center_vertical"
            android:textSize="12sp"
            android:textColor="@color/color_b2"
            android:layout_marginStart="16dp"/>

        <EditText
            android:id="@+id/etLoginName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp36"
            android:layout_marginStart="16dp"
            android:layout_gravity="center_vertical"
            android:textCursorDrawable="@null"
            android:textColor="@color/color_b1"
            android:background="@null"
            android:hint="Username"
            android:textColorHint="@color/color_b2"
            android:maxLines="1"
            android:textSize="17sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#c2c2c2"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/input_passwd"
            android:layout_gravity="center_vertical"
            android:src="@drawable/password"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwd"
            android:layout_gravity="center_vertical"
            android:textSize="12sp"
            android:textColor="@color/color_b2"
            android:layout_marginStart="16dp"/>

        <EditText
            android:id="@+id/etPasswd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp36"
            android:textCursorDrawable="@null"
            android:inputType="textPassword"
            android:layout_marginStart="16dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/color_b1"
            android:background="@null"
            android:maxLines="1"
            android:hint="Password"
            android:textColorHint="#c2c2c2"
            android:textSize="17sp"/>

    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#c2c2c2"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="149dp"
        android:background="@drawable/bg_layout_bottom_white"
        android:paddingBottom="@dimen/dp16"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/btn_selector_orange"
            android:text="@string/login"
            android:textSize="16sp"
            android:textColor="#ffffff"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/ckIsAutoLogin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="自动登录"
                android:textSize="12sp"
                android:checked="true"
                android:paddingStart="@dimen/dp10"
                android:button="@drawable/check_box_style"
                android:textColor="@color/color_b1"
                android:layout_gravity="end"
                android:layout_marginStart="30dp"/>

            <TextView
                android:id="@+id/tvForgetPasswd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/forget_passwd"
                android:textSize="12sp"
                android:textColor="@color/color_b1"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>